--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "match-supported-locale",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@tsconfig/strictest": "^1.0.1",
     "typescript": "^4.7.4"
   }
 }
