--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "format": "prettier --ignore-path .gitignore --write .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/strictest": "^1.0.1",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
 }
