--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
-
 {
-    "extends": "@tsconfig/strictest/tsconfig.json",
-    "compilerOptions": {
-      "resolveJsonModule": true,
-      "outDir": "dist",
-    },
-    "include": ["src"]
-  }
+  "extends": "@tsconfig/strictest/tsconfig.json",
+  "compilerOptions": {
+    "resolveJsonModule": true,
+    "outDir": "dist"
+  },
+  "include": ["src"]
+}
