--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "build": "tsc",
     "format": "prettier --ignore-path .gitignore --write .",
+    "prelint": "npm run format",
+    "lint": "eslint --ignore-path .gitignore .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/strictest": "^1.0.1",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
