Install ts-jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,6 @@
     "resolveJsonModule": true,
     "outDir": "dist"
   },
-  "include": ["src"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
