--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "format": "prettier --ignore-path .gitignore --write .",
     "prelint": "npm run format",
     "lint": "eslint --ignore-path .gitignore .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
