--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
     "build": "tsc",
     "format": "prettier --ignore-path .gitignore --write .",
     "prelint": "npm run format",
@@ -21,6 +23,7 @@
     "eslint-config-prettier": "^8.5.0",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
