--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "dist"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["src/**/*.test.ts", "node_modules", "dist"]
 }
