--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "author": "",
+  "license": "ISC",
   "scripts": {
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
@@ -12,8 +14,12 @@
     "lint": "eslint --ignore-path .gitignore .",
     "test": "jest"
   },
-  "author": "",
-  "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run typecheck && npm run lint",
+      "pre-push": "npm run test"
+    }
+  },
   "devDependencies": {
     "@tsconfig/strictest": "^1.0.1",
     "@types/jest": "^28.1.6",
@@ -21,6 +27,7 @@
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
+    "husky": "^4.3.8",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
