--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "resolveJsonModule": true,
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/**/*.test.ts", "node_modules", "dist"]
+  "exclude": ["src/**/*.test.ts", "node_modules", "dist", "coverage"]
 }
