Add missing package.json details

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "match-supported-locale",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "author": "",
+  "description": "A small, zero-dependency, TypeScript-compatible utility for best-matching a locale against a list of supported locales.",
+  "keywords": ["locale", "match locale", "match supported locale", "best-match supported locale"],
+  "homepage": "https://github.com/DavidR95/match-supported-locale#readme",
   "license": "ISC",
+  "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
